<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:background="@color/colorWhite">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_down_gray">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribe"
            android:textSize="@dimen/size16"
            android:textColor="@color/colorPrimary"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            />
        <LinearLayout
            android:id="@+id/close_popview"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|center_horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/close"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribe_my_follow"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size18"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:text="@string/subscribe_my_follow_click"
            android:textColor="@color/colorDDD"
            android:textSize="@dimen/size14"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:textSize="@dimen/size14"
            android:textColor="@color/green"
            android:text="@string/subscribe_my_follow_edit"
            android:background="@drawable/solid_white_boder_green_radius_half"/>
    </LinearLayout>
    <GridView
        android:id="@+id/gridview_all"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:numColumns="3"
        android:horizontalSpacing="10dp"
        android:verticalSpacing="10dp"></GridView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribe_more_channel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size18"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:text="@string/subscribe_add_channel_click"
            android:textColor="@color/colorDDD"
            android:textSize="@dimen/size14"/>
    </LinearLayout>
    <GridView
        android:id="@+id/gridview_follow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:numColumns="3"
        android:horizontalSpacing="2dp"
        android:verticalSpacing="2dp"></GridView>
</LinearLayout>
