<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:clipChildren="false"
    android:background="@drawable/line_top"
    >
    <LinearLayout
        android:id="@+id/home"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/home_imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/home_a"/>
        <TextView
            android:id="@+id/home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="12sp"
            android:textColor="@drawable/nav_selector_color"
            android:text="@string/main_title"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/article"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/article_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/article"/>
        <TextView
            android:id="@+id/article_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="12sp"
            android:textColor="@drawable/nav_selector_color"
            android:text="@string/article_title"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/intelligent"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/itelligent_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="-25dp"
            android:background="@drawable/radiu_top"
            android:src="@drawable/intelligent"/>
        <TextView
            android:id="@+id/intelligent_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@drawable/nav_selector_color"
            android:text="@string/intelligent_title"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/service"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/service_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/service"/>
        <TextView
            android:id="@+id/service_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="12sp"
            android:textColor="@drawable/nav_selector_color"
            android:text="@string/service_title"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/user"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/user_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/user"/>
        <TextView
            android:id="@+id/user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="12sp"
            android:textColor="@drawable/nav_selector_color"
            android:text="@string/user_title"/>
    </LinearLayout>
</LinearLayout>